2006-08-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_motifs_randesu_estimate) :
	repaired

2006-08-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R (P, path) : removed, they're 
	built into E()
	(E, E<-) : add P, path arguments

2006-08-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) : 
	new indexing functions: nei(), adj(), from(), to()
	* interfaces/R/src/rinterface.c (R_igraph_vs_nei, R_igraph_vs_adj)
	(R_igraph_es_adj) : added

2006-08-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph.graphml) : removed 
	'directed' attribute
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_graphml) :
	remove 'directed' attribute

2006-08-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, write.graph) :
	added graphml format
	(read.graph.graphml, write.graph.graphml) : added
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_graphml)
	(R_igraph_write_graph_graphml) : added

2006-08-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R ([.igraph.es) : adj function added

2006-07-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (as.directed, as.undirected) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_to_directed)
	(R_igraph_to_undirected) : added

2006-07-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (write.graph) : added pajek format
	(write.graph.pajek) : added
	* interfaces/R/src/rinterface.c (R_igraph_write_graph_pajek) : added

	* interfaces/R/src/rinterface.c 
	(R_igraph_attribute_get_numeric_vertex_attr)
	(R_igraph_attribute_get_numeric_edge_attr) : convert to NUMERIC

2006-07-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (page.rank) : added
	* interfaces/R/src/rinterface.c (R_igraph_pagerank) : added
