@@ -1,3 +1,8 @@
+2006-08-16  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c (R_igraph_attribute_get_info) : 
+	INTSXP is considered at numeric attribute
+
 2006-08-14  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c (R_igraph_motifs_randesu_estimate) :
